# telegram-bot

./: .editorconfig  .env.exmaple  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  edgedb.toml  flake.nix  generate_db_quiries.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yaml  lint_and_types.yml  publish-docker.yml  publish_docker.yml
bot/: __main__.py  client.py  env.py  templates.py
bot/handlers/: __init__.py  schedule.py  start.py
bot/services/: models.py
daemon/: __main__.py  env.py
database/queries/cabinet/: __init__.py  save_insert.edgeql  save_insert_async_edgeql.py  select_by_schema_id.edgeql  select_by_schema_id_async_edgeql.py
database/queries/couple/: __init__.py  insert.edgeql  insert_async_edgeql.py
database/queries/lecturer/: __init__.py  save_insert.edgeql  save_insert_async_edgeql.py  select_by_schema_id.edgeql  select_by_schema_id_async_edgeql.py
database/queries/lesson/: __init__.py  save_insert_async_edgeql.py  select_by_id.edgeql  select_by_id_async_edgeql.py  select_by_relations.edgeql  select_by_relations_async_edgeql.py  unconflict_insert.edgeql
database/schema/: default.esdl
database/schema/migrations/: 00001-m1h7rbf.edgeql  00001-m1m77ww.edgeql  (+2 more)
docs/: db_schema.mermaid
migrations/: env.py
migrations/versions/: 2025-01-23T22:38_init.py  2025-01-25T10:22_unique_lesson.py  2025-01-27T11:15_add_setting_is_notify_vacation.py  2025-05-26T10:59_add_area_to_group.py  2025-05-26T11:22_update_group_area_type.py  2026-02-16T00:52_fix_user_settings_unique_user_id.py  3ad13decb32f_init.py
schedule_parser/: __init__.py  __main__.py  bells.py  cabinets.py  client.py  coordinate.py  env.py  group.py  lesson.py  row.py  schedule.py  section.py  study_day.py
services/: __main__.py
services/database/: __init__.py  cabinet.py  couple.py  lecturer.py  lesson.py  repository.py
src/: env.py
src/bot/: Dockerfile  __main__.py  client.py  docker-entrypoint.sh  templates.py
src/daemon/: Dockerfile  __main__.py  client.py  db_bridge.py  decorators.py  group_bridge.py  http_client.py  schedule_fetcher.py
src/database/: __init__.py  __main__.py  client.py  generated.py  models.py  schemas.py
src/schedule_parser/: __main__.py  area.py  base.py  bells.py  group.py  hours.py  lecturer.py  study_day.py
templates/: hello.j2  next_day.j2  schedule.j2  version.j2
vgpk_bot/: __main__.py  client.py  env.py
(+43 files in other folders)
