[project]
name = "paraplan"
version = "2.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10.5",
    "orjson>=3.10.7",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "telegrinder>=0.2.2",
    "jinja2>=3.1.4",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0.37",
    "loguru>=0.7.3",
    "croniter>=6.0.0",

    "daemon",
    "bot",
    "env",
    "database",
    "schedule_parser"
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.392",
    "ruff>=0.9.3",
]


[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
daemon = { workspace = true }
bot = { workspace = true }
env = { workspace = true }
database = { workspace = true }
schedule_parser = { workspace = true }


[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
lint.select = ["I", "E", "F", "B", "Q"]
lint.ignore = ["B008"]
line-length = 99

[tool.ty.src]
exclude = [".venv"]
