[project]
name = "paraplan"
version = "2.4.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.10.5",
    "orjson>=3.10.7",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "telegrinder>=1.0.1",
    "jinja2>=3.1.4",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0.37",
    "loguru>=0.7.3",
    "croniter>=6.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "ruff>=0.9.3",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 99

